# github-trend-insights

./: .env.example  .gitignore  README.md  pipeline.py  pyproject.toml  run_pipeline.py
github_insights/: Makefile  README.md  dbt_project.yml  pyproject.toml
github_insights/.dlt/: config.toml  secrets.toml
github_insights/exports/: feature_prs_lace_vs_top10.parquet  feature_prs_monthly.parquet  feature_releases_lace_vs_top10.parquet  feature_releases_monthly.parquet  median_feature_prs_lace_vs_top10.parquet  median_releases_lace_vs_top10.parquet
github_insights/models/: export.py  schema.yml  sources.yml
github_insights/models/bronze/: stg_github_pull_requests.sql  stg_github_releases.sql  stg_github_repositories.sql  stg_repository_base.sql
github_insights/models/gold/prs/: feature_prs_lace_vs_top10.sql  feature_prs_monthly.sql  median_feature_prs_lace_vs_top10.sql
github_insights/models/gold/releases/: feature_releases_lace_vs_top10.sql  feature_releases_monthly.sql  median_releases_lace_vs_top10.sql
github_insights/models/silver/: stg_pull_requests.sql  stg_releases.sql
github_insights/scripts/: export_data.py
github_insights/src/cardano_insights/: __init__.py  github_pipeline.py
github_insights/src/cardano_insights/connectors/: __init__.py  github.py
github_insights/tests/: __init__.py  conftest.py
github_insights/tests/connectors/: __init__.py  test_github.py
