[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-cardano-insights"
version = "1.0.0"
description = "A comprehensive data pipeline for collecting and analyzing GitHub data from the Cardano wallet ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "jitsejan", email = "code@jitsejan.com"},
]
keywords = ["cardano", "github", "data-pipeline", "analytics", "dlt", "dbt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core data pipeline
    "dlt[duckdb]>=0.4.0",
    
    # API and web
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    
    # Data processing
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    
    # Database
    "duckdb>=0.9.0",
    "sqlalchemy>=2.0.0",
    
    # Environment and configuration
    "python-dotenv>=1.0.0",
    
    # Cloud storage
    "boto3>=1.34.0",
    "s3fs>=2023.12.0",
    
    # Development and debugging
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    
    # Documentation
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
]

analytics = [
    # dbt for analytics
    "dbt-core>=1.7.0",
    "dbt-duckdb>=1.7.0",
    
    # Jupyter for exploration
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]

all = ["github-cardano-insights[dev,analytics]"]

[project.urls]
Homepage = "https://github.com/jitsejan/github-trend-insights"
Repository = "https://github.com/jitsejan/github-trend-insights"
Issues = "https://github.com/jitsejan/github-trend-insights/issues"

[project.scripts]
github-cardano-pipeline = "run_pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["pipeline.py", "run_pipeline.py"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["pipeline", "run_pipeline"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=pipeline --cov=run_pipeline --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "dlt.*",
    "duckdb.*",
    "boto3.*",
    "s3fs.*",
]
ignore_missing_imports = true