[project]
name = "cardano-insights"
version = "0.1.0"
description = "Data pipeline for Cardano ecosystem insights from GitHub, Catalyst, and other sources"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[s3]>=1.15.0",
    "duckdb>=1.3.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "boto3>=1.34.0",
    "s3fs>=2024.10.0",
    "dbt-duckdb>=1.8.2",
    "requests>=2.31.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]